bugfix: Fixes position and z-index for button Reduces cube

--- a/style_cube.css
+++ b/style_cube.css
@@ -8,6 +8,8 @@ body {
 }
 #start {
   font-size: 3em;
+  position: relative;
+  z-index: 2;
 }
 .scene {
   position: relative;
@@ -33,31 +35,30 @@ body {
   height: 480px;
   width: 480px;
   position: absolute;
-  background-color: rgba(34, 91, 183,0.7);
+  background-color: rgba(34, 91, 183,0.6);
   border: 4px solid #282b30;
-  transform: scale3d(0.5,0.5,0.5);
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 5em;
 }
 .first_side {
-  transform: rotateX(0deg) translateZ(240px);
+  transform: rotateX(0deg) translateZ(144px) scale3d(0.6,0.6,0.6);
 }
 .second_side {
-  transform: rotateY(90deg) translateZ(240px);
+  transform: rotateY(90deg) translateZ(144px) scale3d(0.6,0.6,0.6);
 }
 .third_side {
-  transform: rotateX(180deg) translateZ(240px);
+  transform: rotateX(180deg) translateZ(144px) scale3d(0.6,0.6,0.6);
 }
 .fourth_side {
-  transform: rotateY(-90deg) translateZ(240px);
+  transform: rotateY(-90deg) translateZ(144px) scale3d(0.6,0.6,0.6);
 }
 .fifth_side {
-  transform: rotateX(90deg) translateZ(240px);
+  transform: rotateX(90deg) translateZ(144px) scale3d(0.6,0.6,0.6);
 }
 .sixth_side {
-  transform: rotateX(-90deg) translateZ(240px);
+  transform: rotateX(-90deg) translateZ(144px) scale3d(0.6,0.6,0.6);
 }
 .cube-container {
   transform: rotateX(45deg) rotateY(45deg);
